<resources>
    <string name="app_name" translatable="false">Families Share</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="btn_register_text">REGISTRATI</string>
    <string name="btn_login_text" translatable="false">LOGIN</string>
    <string name="btn_forgotten_psw_text">Password dimenticata?</string>
    <string name="switch_keep_access_text">Mantieni l\'accesso</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="fs_logo_description">Logo di Families Share</string>
    <string name="txtview_oppure_text">oppure</string>
    <string name="login_error_credentials">Credenziali errate</string>
    <string name="server_error_generic">Errore del server</string>
    <string name="registration_title">REGISTRAZIONE</string>
    <string name="name">Nome</string>
    <string name="lastname">Cognome</string>
    <string name="sex">Sesso</string>
    <string name="female">Femmina</string>
    <string name="male">Maschio</string>
    <string name="other">Altro</string>
    <string name="birthdate">Data di nascita</string>
    <string name="date">gg/mm/aaaa</string>
    <string name="phone_number">Numero di telefono</string>
    <string name="email_address">Indirizzo email</string>
    <string name="new_password">Nuova password</string>
    <string name="repeat_password">Ripeti password</string>
    <string name="cancel">Annulla</string>
    <string name="shifted_cancel">ANNULLA</string>
    <string name="register">Registrati</string>
    <string name="passwords_dont_match">Le password non coincidono</string>
    <string name="user_registerd_success">Utente registrato con successo</string>
    <string name="user_already_exists">L\'utente esiste già</string>
    <string name="server_error_check_fields">Errore del server. Controlla i dati</string>
    <string name="password_too_short">La password è troppo corta. Lunghezza minima 8 caratteri</string>
    <string name="insert_required_fields">Inserire i campi obbligatori (con *)</string>
    <string name="name_req">Nome*</string>
    <string name="lastname_req">Cognome*</string>
    <string name="email_address_req">Indirizzo Email*</string>
    <string name="repeat_password_req">Ripeti password*</string>
    <string name="new_password_req">Nuova password*</string>
    <string name="insert_email_password">Inserisci Email e Password</string>
    <string name="my_groups">I Miei Gruppi</string>
    <string name="no_group_joined">Non fai parte di nessun gruppo</string>
    <string name="authentication_error">Errore nell\'autenticazione</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="sure_to_logout">Sei sicuro di volerti disconnettere?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="logout_success">Logout effetuato</string>
    <string name="create_group">Creazione gruppo</string>
    <string name="group_name_text">Nome gruppo:</string>
    <string name="group_name">Nome gruppo*</string>
    <string name="group_description_text">Descrizione gruppo:</string>
    <string name="group_description">Descrizione gruppo*</string>
    <string name="group_location_text">Location gruppo:</string>
    <string name="group_location">Location gruppo*</string>
    <string name="confirm">Conferma</string>
    <string name="shifted_confirm">CONFERMA</string>
    <string name="erase">Cancella</string>
    <string name="search">Cerca</string>
    <string name="search_a_group">Cerca un gruppo</string>
    <string name="add_obj">Aggiungi un oggetto</string>
    <string name="obj_name_title">Nome oggetto:</string>
    <string name="obj_name_text">Nome oggetto*</string>
    <string name="obj_desc_title">Descrizione oggetto:</string>
    <string name="obj_desc_text">Descrizione oggetto*</string>
    <string name="obj_owner">Proprietario:</string>
    <string name="group_creation_success">Gruppo creato correttamente</string>
    <string name="user_not_authenticated">Utente non autenticato</string>
    <string name="bad_request">Errore nella richiesta</string>
    <string name="create_group_title">Crea un gruppo</string>
    <string name="access_group">Accedi ad un gruppo</string>
    <string name="no_group_found">Non è stato trovato alcun gruppo</string>
    <string name="join_group">Accedere al gruppo</string>
    <string name="sure_want_to_join">Sei sicuro di voler accedere a</string>
    <string name="group_join_dome">Accesso al gruppo effettuato</string>
    <string name="obj_state">Stato:</string>
    <string name="obj_shared_group">Gruppi in cui è stato condiviso:</string>
    <string name="btn_obj_loan">Richiedi prestito</string>
    <string name="btn_add_obj">AGGIUNGI</string>
    <string name="obj_info">Informazioni dell\'oggetto</string>
    <string name="my_profile_info">Il mio profilo</string>
    <string name="obj_addition_success">Oggetto aggiunto correttamente</string>
    <string name="obj_loan_success">Oggetto prestato con successo</string>
    <string name="group_info">Info</string>
    <string name="my_objs">I miei oggetti</string>
    <string name="group_members">Membri</string>
    <string name="group_board">Bacheca</string>
    <string name="group_location_label">Location:</string>
    <string name="group_info_label">Informazioni del gruppo</string>
    <string name="group_name_label">Nome gruppo:</string>
    <string name="group_descr_label">Descrizione:</string>
    <string name="group_owner_label">Creatore del gruppo:</string>
    <string name="no_group_member">Questo gruppo è vuoto</string>
    <string name="group_members_label">Membri del gruppo:</string>
    <string name="group_board_title">Bacheca del gruppo:</string>
    <string name="empty_board">La bacheca è vuota</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group_already_joined">Hai già affettuato l\'accesso a questo gruppo</string>
    <string name="your_shared_objs">I tuoi oggetti condivisi con il gruppo:</string>
    <string name="obj_loans">Oggetti scambiati</string>
    <string name="no_shared_objects">Nessun oggetto condiviso</string>
    <string name="no_object_inserted">Nessun oggetto inserito</string>
    <string name="search_an_object">Cerca un oggetto</string>
    <string name="btn_obj_remove_loan">Rimuovi condivisione</string>
    <string name="sure_want_to_share">Sicuro di voler condividere l\'oggetto?</string>
    <string name="object_shared">L\'oggetto è stato condiviso</string>
    <string name="incoming_requests">Richieste in entrata</string>
    <string name="outgoing_requests">Richieste in uscita</string>
    <string name="my_requests">Le mie richieste</string>
    <string name="request_an_object">Richiedi un oggetto</string>
    <string name="return_data">Data di restituzione</string>
    <string name="object_already_shared">L\'oggetto è già condiviso con il gruppo</string>
    <string name="btn_obj_delete">Elimina dal sistema</string>
    <string name="not_shared">Non in prestito</string>
    <string name="shared">In prestito</string>
    <string name="obj_deleted">Oggetto eliminato</string>
    <string name="sure_want_to_delete">Sicuro di voler eliminare l\'oggetto?</string>
    <string name="sure_want_to_loan">Sei sicuro di voler richiedere il prestito?</string>
    <string name="sure_want_to_remove_loan">Sei sicuro di voler rimovere la condivisione con questo gruppo?</string>
    <string name="no_requests">Non hai richieste di condivisione</string>
    <string name="share_req_txt">Richiesta di prestito inviata</string>
    <string name="btn_obj_accept">PRESTA</string>
    <string name="sure_want_to_accept">Sei sicuro di voler prestare l\'oggetto?</string>
    <string name="txt_lent_objs">Oggetti prestati</string>
    <string name="txt_borrowed_objs">Oggetti presi in prestito</string>
    <string name="obj_remove_share">Condivisione con gruppo rimossa</string>
    <string name="btn_guide">Apri il PDF per leggere la guida</string>
    <string name="user_guide">Guida all\'utilizzo</string>
    <string name="btn_obj_return">Restituisci</string>
    <string name="sure_want_to_return">Sei sicuro di voler restituire l\'oggetto?</string>
    <string name="obj_returned">Oggetto restituito</string>
    <string name="sure_want_to_ignore">Sei sicuro di voler ignorare la richiesta?</string>
    <string name="obj_req_ignored">Richiesta di prestito ignorata</string>
    <string name="btn_obj_ignore_txt">Ignora</string>
    <string name="obj_accept_req">Oggetto prestato con successo</string>
    <string name="no_in_requests">Nessuna richiesta in entrata</string>
    <string name="no_out_requests">Nessuna richiesta in uscita</string>
    <string name="no_lent_obj">Nessun oggetto prestato</string>
    <string name="no_borrowed_obj">Nessun oggetto preso in prestito</string>
</resources>