<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cyberbug.view.LoginFragment">

    <Button
        android:id="@+id/btn_register"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginBottom="148dp"
        android:text="@string/btn_register_text"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtview_oppure" />

    <Button
        android:id="@+id/btn_forgotten_psw"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginBottom="7dp"
        android:text="@string/btn_forgotten_psw_text"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_keep_access" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:text="@string/btn_login_text"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/txtview_oppure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_forgotten_psw" />

    <EditText
        android:id="@+id/txt_login_password"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/switch_keep_access"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_login_email"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txt_login_email"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/txt_login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_view_fs"
        android:autofillHints="emailAddress" />

    <ImageView
        android:id="@+id/img_view_fs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="113dp"
        android:layout_marginBottom="43dp"
        android:contentDescription="@string/fs_logo_description"
        android:src="@drawable/families_share_logo"
        app:layout_constraintBottom_toTopOf="@+id/txt_login_email"
        app:layout_constraintStart_toStartOf="@+id/txt_login_email"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_keep_access"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="8dp"
        android:minHeight="48dp"
        android:text="@string/switch_keep_access_text"
        app:layout_constraintBottom_toTopOf="@+id/btn_forgotten_psw"
        app:layout_constraintStart_toStartOf="@+id/txt_login_password"
        app:layout_constraintTop_toBottomOf="@+id/txt_login_password" />

    <TextView
        android:id="@+id/txtview_oppure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtview_oppure_text"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>