<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cyberbug.view.RequestObjFrag">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_object_loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <ProgressBar
        android:id="@+id/progressBar_requestObj"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        </ProgressBar>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/requestObj_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/owner_obj_request"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="100dp"
            android:gravity="center_vertical"
            android:text="@string/obj_owner"
            android:textIsSelectable="true"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_lastname_ownerObj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="Nome cognome utente proprietario"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/owner_obj_request"
            app:layout_constraintTop_toBottomOf="@+id/owner_obj_request" />

        <TextView
            android:id="@+id/descr_obj_request"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical"
            android:text="@string/obj_desc_title"
            android:textIsSelectable="true"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/owner_obj_request"
            app:layout_constraintTop_toBottomOf="@+id/name_lastname_ownerObj" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="315dp"
            android:layout_height="100dp"
            android:text="@string/obj_desc_text"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/name_lastname_ownerObj"
            app:layout_constraintTop_toBottomOf="@+id/descr_obj_request" />

        <TextView
            android:id="@+id/return_date_obj_request"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical"
            android:text="@string/return_data"
            android:textIsSelectable="true"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/descr_obj_request"
            app:layout_constraintTop_toBottomOf="@+id/textView38" />

        <TextView
            android:id="@+id/textView40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/textView38"
            app:layout_constraintTop_toBottomOf="@+id/return_date_obj_request" />

        <Button
            android:id="@+id/btn_canc_requestObj"
            android:layout_width="120dp"
            android:layout_height="65dp"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="120dp"
            android:text="@string/shifted_cancel"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_confirm_requestObj"
            android:layout_width="120dp"
            android:layout_height="65dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="120dp"
            android:text="@string/shifted_confirm"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>