<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cyberbug.view.AddObjFrag">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/createGroupEraseButton"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginEnd="15dp"
                android:text="@string/erase"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/createGroupConfirmButton"
                app:layout_constraintEnd_toStartOf="@+id/createGroupConfirmButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/createGroupConfirmButton" />

            <Button
                android:id="@+id/createGroupConfirmButton"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginEnd="7dp"
                android:text="@string/confirm"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/createGroupEraseButton"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

            <TextView
                android:id="@+id/textView6"
                style="@style/Widget.AppCompat.TextView.SpinnerItem"
                android:layout_width="wrap_content"
                android:layout_height="51dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="110dp"
                android:gravity="center_vertical"
                android:text="@string/obj_name_title"
                android:textIsSelectable="true"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                style="@style/Widget.AppCompat.TextView.SpinnerItem"
                android:layout_width="wrap_content"
                android:layout_height="51dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="@string/obj_desc_title"
                android:textIsSelectable="true"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/groupNameText" />

            <EditText
                android:id="@+id/groupNameText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/obj_name_text"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <EditText
                android:id="@+id/editTextTextMultiLine"
                android:layout_width="339dp"
                android:layout_height="214dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/obj_desc_text"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>