<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateGroupFrag">

    <Button
        android:id="@+id/createGroupEraseButton"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginEnd="15dp"
        android:text="@string/erase"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/createGroupConfirmButton"
        app:layout_constraintEnd_toStartOf="@+id/createGroupConfirmButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/createGroupConfirmButton"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/createGroupConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="48dp"
        android:text="@string/confirm"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/createGroupEraseButton"
        app:layout_constraintTop_toBottomOf="@+id/groupDescrText" />

    <EditText
        android:id="@+id/groupDescrText"
        android:layout_width="343dp"
        android:layout_height="197dp"
        android:layout_marginBottom="72dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/group_description"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/createGroupConfirmButton"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/groupNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="14dp"
        android:ems="10"
        android:hint="@string/group_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView27"
        app:layout_constraintEnd_toEndOf="@+id/groupLocationText"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/groupLocationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:ems="10"
        android:hint="@string/group_location"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView27"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView6"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:text="Nome gruppo:"
        android:textIsSelectable="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/groupNameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView8"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:text="Descrizione gruppo:"
        android:textIsSelectable="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/groupDescrText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupLocationText" />

    <TextView
        android:id="@+id/textView27"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:text="Location:"
        android:textIsSelectable="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/groupLocationText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupNameText" />

    <TextView
        android:id="@+id/textView13"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="22dp"
        android:text="@string/create_group"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>